--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "colorette": "^2.0.19",
     "discord-api-types": "0.33.5",
     "discord.js": "^13.9.2",
+    "figlet": "^1.5.2",
+    "gradient-string": "^2.0.1",
     "reflect-metadata": "^0.1.13",
     "utf-8-validate": "^5.0.9",
     "zlib-sync": "^0.1.7"
@@ -40,6 +42,8 @@
     "@sapphire/eslint-config": "^4.3.7",
     "@sapphire/prettier-config": "^1.4.3",
     "@sapphire/ts-config": "^3.3.4",
+    "@types/figlet": "^1.5.4",
+    "@types/gradient-string": "^1.1.2",
     "@types/node": "^18.6.4",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
